Se añade boostrap en contactos y se acomoda con grids trabajos-realizados.html

--- a/pages/trabajos-realizados.html
+++ b/pages/trabajos-realizados.html
@@ -11,68 +11,62 @@
 </head>
 
 <body>
-    <!----COMIENZA HEADER-->
-    <header class="header">
-        <img src="../images/logofega.png" alt="logo-empresa" class="logo">
-        <nav class="botom-nav">
-            <ul>
-                <li><a href="../index.html">¿Quienes Somos?</a></li>
-                <li><a href="../pages/trabajos-realizados.html">Trabajos Realizados</a></li>
-                <li><a href="../pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a></li>
-                <li><a href="../pages/contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!----TERMINA EL HEADER-->
-        <!---COMIENZA MAIN-->
-    <main>
-        <h1>Trabajos Realizados</h1>
-        <section class="trabajos-realizados">
-            <div class="card-trabajos"><img
-                    src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit neque
-                    at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
+        <header>
+            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
+            <nav class="botom-nav">
+                <ul>
+                    <li><a href="../index.html">¿Quienes Somos?</a></li>
+                    <li><a href="../pages/trabajos-realizados.html">Trabajos Realizados</a></li>
+                    <li><a href="../pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/contactanos.html">Contactanos</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="titulo-tb-realizados">
+                <h1>Trabajos Realizados</h1>
             </div>
-            <div class="card-trabajos"><img
-                    src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit neque
-                    at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
-            </div>
-            <div class="card-trabajos"><img
-                    src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit neque
-                    at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
-            </div>
-            <div class="card-trabajos"><img
-                    src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit Exercitationem ab qui reprehenderit neque
-                    at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
-            </div>
-            <div class="card-trabajos"><img
-                    src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit neque
-                    at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
-            </div>
-            <div class="card-trabajos"><img
-                    src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit neque
-                    at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
-            </div>
-        <!---TERMINA EL MAIN-->
+            <section class="trabajos-realizados">
+                <div class="card-trabajos1"><img
+                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
+                        neque
+                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
+                </div>
+                <div class="card-trabajos2"><img
+                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
+                        neque
+                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
+                </div>
+                <div class="card-trabajos3"><img
+                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
+                        neque
+                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
+                </div>
+                <div class="card-trabajos4"><img
+                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit Exercitationem ab qui reprehenderit
+                        neque
+                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
+                </div>
+                <!---TERMINA EL MAIN-->
 
 
-        </section>
-    </main>
+            </section>
+        </main>
 
-    <!---Comienza el Footer-->
-    <footer>
-        <div class="iconos">
-            <a href="http://www.facebook.com.ar">
-                <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
-            <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
-        </div>
-    </footer>
+        <!---Comienza el Footer-->
+        <footer>
+            <div class="iconos">
+                <a href="http://www.facebook.com.ar">
+                    <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
+                <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
+        </footer>
+    </div>
+    </div>
 </body>
 
 </html>
