--- a/pages/trabajos-realizados.html
+++ b/pages/trabajos-realizados.html
@@ -5,12 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Fega Proveedores</title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
 
 <body>
+    <div class="content-father">
+        <!--Comienza Menu Mobile Boostrap-->
+        <div class="menu-mobile">
+            <nav class="navbar navbar-expand-lg custom-color-nav">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">¿Quienes Somos?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/trabajos-realizados.html">Trabajos Realizados</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/acerca-nosotros.html">Acerca de Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/contactanos.html">Contactanos</a>
+                            </li>
+                        </ul>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!--Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
+
         <header>
             <img src="../images/logofega.png" alt="logo-empresa" class="logo">
             <nav class="botom-nav">
@@ -23,6 +60,9 @@
                 </ul>
             </nav>
         </header>
+        <!--TERMINA EL HEADER-->
+
+        <!--COMIENZA MAIN-->
         <main>
             <div class="titulo-tb-realizados">
                 <h1>Trabajos Realizados</h1>
@@ -52,13 +92,13 @@
                         neque
                         at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
                 </div>
-                <!---TERMINA EL MAIN-->
+                <!--TERMINA EL MAIN-->
 
 
             </section>
         </main>
 
-        <!---Comienza el Footer-->
+        <!--Comienza el Footer-->
         <footer>
             <div class="iconos">
                 <a href="http://www.facebook.com.ar">
@@ -67,6 +107,9 @@
         </footer>
     </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
