--- a/index.html
+++ b/index.html
@@ -1,71 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>Fega Proveedores</title>
 </head>
+
 <body>
-    <div class="content-father">      
-            <header>
-            <img src="./images/logofega.png" alt="logo-empresa" class="logo">
+    <!--  Comienza Menu Mobile Boostrap-->
+    <div class="content-father">
+        <div class="menu-mobile">
+            <nav class="navbar navbar-expand-lg custom-color-nav">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./index.html">¿Quienes Somos?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/trabajos-realizados.html">Trabajos Realizados</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/acerca-nosotros.html">Acerca de Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./pages/contactanos.html">Contactanos</a>
+                            </li>
+                        </ul>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <!--  Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
+
+        <header>
+            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
             <nav class="botom-nav">
                 <ul>
-                    <li><a href="./index.html">¿Quienes Somos?</a></li>
-                    <li><a href="./pages/trabajos-realizados.html">Trabajos Realizados</a></li>
-                    <li><a href="./pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
-                    <li><a href="./pages/servicios.html">Servicios</a></li>
-                    <li><a href="./pages/contactanos.html">Contactanos</a></li>
-                </ul>    
+                    <li><a href="../index.html">¿Quienes Somos?</a></li>
+                    <li><a href="../pages/trabajos-realizados.html">Trabajos Realizados</a></li>
+                    <li><a href="../pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/contactanos.html">Contactanos</a></li>
+                </ul>
             </nav>
         </header>
+        <!----TERMINA EL HEADER-->
+
+        <!---COMIENZA MAIN-->
         <main>
-            <div class="titulo-main">            
+            <div class="titulo-main">
                 <h1>¿Quienes somos?</h1>
             </div>
             <div class="primer-row">
-                    <p>Somos una empresa joven,conformada por personas con basta experiencia en el area de proveer
-                        soluciones especificas <br> y optimas para las necesidades de la empresa respecto al insumos y
-                        elaboracion de piezas aptas para uso alimenticio y con un bajo indice de desgaste </p>
-                    </div>
-    <div class="foto-primer-row">
-        <img src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png"
-alt="placeholder">
-</div>
-    <section class="left-col-quienesomos">
-        <h2>
-            Piezas Realizadas
-        </h2>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi illo architecto consequuntur, ab ipsam
-            saepe blanditiis consequatur tempora, voluptates vel sequi excepturi dignissimos sunt a aperiam odio
-            doloremque! Provident.</p>
-        <img src="./images/emova-logo.jpg" alt="">
-        <img src="./images/ceramica-san-lorenzo_logo.jpg" alt="">
-        <img src="./images/aceros-angeletti.jpg" alt="">
-        <label for="boton-vermas">Ver mas trabajos realizados:</label>
-        <button class="caja-fotos-principales" id="boton-vermas">Ver mas</button>
-    </section>
-    <section class="caja-fotos-principales">
-        <h2>
-            Nuestros Clientes
-        </h2>
-        <p>Estas son algunas de las empresas que día a día confían en nuestro compromiso:</p>
-        <img src="./images/emova-logo.jpg" alt="Logo de la empresa Emova">
-        <img src="./images/ceramica-san-lorenzo_logo.jpg" alt="Logo de la empresa ceramicas san lorenzo">
-        <img src="./images/aceros-angeletti.jpg" alt="Logo de la empresa Aceros Angeletti">
-    </section>
-    </main>
-            <footer>
-                <div class="iconos">
-                    <a href="http://www.facebook.com.ar">
-                        <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
-                    <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
+                <p>Somos una empresa joven,conformada por personas con basta experiencia en el area de proveer
+                    soluciones especificas <br> y optimas para las necesidades de la empresa respecto al insumos y
+                    elaboracion de piezas aptas para uso alimenticio y con un bajo indice de desgaste </p>
+            </div>
+            <div class="foto-primer-row">
+                <img src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png"
+                    alt="placeholder">
+            </div>
+            <section class="left-col-quienesomos">
+                <h2>
+                    Piezas Realizadas
+                </h2>
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi illo architecto consequuntur, ab ipsam
+                    saepe blanditiis consequatur tempora, voluptates vel sequi excepturi dignissimos sunt a aperiam odio
+                    doloremque! Provident.</p>
+                <img src="./images/emova-logo.jpg" alt="">
+                <img src="./images/ceramica-san-lorenzo_logo.jpg" alt="">
+                <img src="./images/aceros-angeletti.jpg" alt="">
+                <label for="boton-vermas">Ver mas trabajos realizados:</label>
+                <button class="caja-fotos-principales" id="boton-vermas">Ver mas</button>
+            </section>
+            <section class="caja-fotos-principales">
+                <h2>
+                    Nuestros Clientes
+                </h2>
+                <p>Estas son algunas de las empresas que día a día confían en nuestro compromiso:</p>
+                <img src="./images/emova-logo.jpg" alt="Logo de la empresa Emova">
+                <img src="./images/ceramica-san-lorenzo_logo.jpg" alt="Logo de la empresa ceramicas san lorenzo">
+                <img src="./images/aceros-angeletti.jpg" alt="Logo de la empresa Aceros Angeletti">
+            </section>
+        </main>
+        <!--Termina el main-->
+
+        <!--Comienza el Footer-->
+        <footer>
+            <div class="iconos">
+                <a href="http://www.facebook.com.ar">
+                    <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
+                <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
         </footer>
-        </div>
-    </div>
-</div>  
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
