--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Fega Proveedores</title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
@@ -13,91 +14,137 @@
 
 <body>
     <div class="content-father">
-    <!---COMIENZA HEADER-->
-    <header class="header">
-        <img src="../images/logofega.png" alt="logo-empresa" class="logo">
-        <nav class="botom-nav">
-            <ul>
-                <li><a href="../index.html">¿Quienes Somos?</a></li>
-                <li><a href="../pages/trabajos-realizados.html">Trabajos Realizados</a></li>
-                <li><a href="../pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a></li>
-                <li><a href="../pages/contactanos.html">Contactanos</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!----TERMINA EL HEADER-->
-
-    <!---COMIENZA MAIN-->
-    <main>
-        <div class="titulo-contacto">
-            <h1>Contactanos</h1>
+        <!--Comienza Menu Mobile Boostrap-->
+        <div class="menu-mobile">
+            <nav class="navbar navbar-expand-lg custom-color-nav">
+                <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">¿Quienes Somos?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/trabajos-realizados.html">Trabajos Realizados</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/acerca-nosotros.html">Acerca de Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../pages/contactanos.html">Contactanos</a>
+                            </li>
+                        </ul>
+                        </form>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <section class="formulario-contacto">
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="well well-sm">
-                <form class="form-horizontal" method="post">
-                    <fieldset>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="fname" name="name" type="text" placeholder="Nombre" class="form-control">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="lname" name="name" type="text" placeholder="Apellido" class="form-control">
-                            </div>
-                        </div>
+        <!--Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
 
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="email" name="email" type="text" placeholder="Email" class="form-control">
-                            </div>
-                        </div>
+        <header>
+            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
+            <nav class="botom-nav">
+                <ul>
+                    <li><a href="../index.html">¿Quienes Somos?</a></li>
+                    <li><a href="../pages/trabajos-realizados.html">Trabajos Realizados</a></li>
+                    <li><a href="../pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/contactanos.html">Contactanos</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!--TERMINA EL HEADER-->
 
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
-                            <div class="col-md-8">
-                                <input id="phone" name="phone" type="text" placeholder="Telefono" class="form-control">
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
-                            <div class="col-md-8">
-                                <textarea class="form-control" id="message" name="message" placeholder="Informacion adicional   " rows="7"></textarea>
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <div class="col-md-12 text-center">
-                                <button type="button" class="btn btn-primary btn-lg">Submit</button>
-                            </div>
-                        </div>
-                    </fieldset>
-                </form>
+        <!--COMIENZA MAIN-->
+        <main>
+            <div class="titulo-contacto">
+                <h1>Contactanos</h1>
             </div>
-        </div>
-    </div>
-</div>
-</section>
-    </main>
-    <!---TERMINA EL MAIN-->
+            <section class="formulario-contacto">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="well well-sm">
+                                <form class="form-horizontal" method="post">
+                                    <fieldset>
+                                        <div class="form-group">
+                                            <span class="col-md-1 col-md-offset-2 text-center"><i
+                                                    class="fa fa-user bigicon"></i></span>
+                                            <div class="col-md-8">
+                                                <input id="fname" name="name" type="text" placeholder="Nombre"
+                                                    class="form-control">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <span class="col-md-1 col-md-offset-2 text-center"><i
+                                                    class="fa fa-user bigicon"></i></span>
+                                            <div class="col-md-8">
+                                                <input id="lname" name="name" type="text" placeholder="Apellido"
+                                                    class="form-control">
+                                            </div>
+                                        </div>
 
-    <!---Comienza el Footer-->
-    <footer>
-        <div class="iconos">
-            <a href="http://www.facebook.com.ar">
-                <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
-            <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
-        </div>
-    </footer>
-</div>
+                                        <div class="form-group">
+                                            <span class="col-md-1 col-md-offset-2 text-center"><i
+                                                    class="fa fa-envelope-o bigicon"></i></span>
+                                            <div class="col-md-8">
+                                                <input id="email" name="email" type="text" placeholder="Email"
+                                                    class="form-control">
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <span class="col-md-1 col-md-offset-2 text-center"><i
+                                                    class="fa fa-phone-square bigicon"></i></span>
+                                            <div class="col-md-8">
+                                                <input id="phone" name="phone" type="text" placeholder="Telefono"
+                                                    class="form-control">
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <span class="col-md-1 col-md-offset-2 text-center"><i
+                                                    class="fa fa-pencil-square-o bigicon"></i></span>
+                                            <div class="col-md-8">
+                                                <textarea class="form-control" id="message" name="message"
+                                                    placeholder="Informacion adicional   " rows="7"></textarea>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <div class="col-md-12 text-center">
+                                                <button type="button" class="btn btn-primary btn-lg">Submit</button>
+                                            </div>
+                                        </div>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <!--TERMINA EL MAIN-->
+
+        <!--Comienza el Footer-->
+        <footer>
+            <div class="iconos">
+                <a href="http://www.facebook.com.ar">
+                    <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
+                <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
