Se corrige los href del nav en el index y el boton de la seccion de contactos ademas de un hiden al overflow-x en .content-father

--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -120,9 +120,9 @@
 
                                         <div class="form-group">
                                             <div class="col-md-12 text-center">
-                                                <button type="button" class="btn btn-primary btn-lg">Submit</button>
+                                                <button type="button" class="btn btn-primary  custom-color-btn">Enviar</button>
                                             </div>
-                                        </div>
+                                        </div>  
                                     </fieldset>
                                 </form>
                             </div>
