--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <!--  Termina Menu Mobile Boostrap / Comienza Header vista desktop-->
 
         <header>
-            <img src="../images/logofega.png" alt="logo-empresa" class="logo">
+            <img src="./images/logofega.png" alt="logo-empresa" class="logo">
             <nav class="botom-nav">
                 <ul>
-                    <li><a href="../index.html">¿Quienes Somos?</a></li>
-                    <li><a href="../pages/trabajos-realizados.html">Trabajos Realizados</a></li>
-                    <li><a href="../pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
-                    <li><a href="../pages/servicios.html">Servicios</a></li>
-                    <li><a href="../pages/contactanos.html">Contactanos</a></li>
+                    <li><a href="./index.html">¿Quienes Somos?</a></li>
+                    <li><a href="./pages/trabajos-realizados.html">Trabajos Realizados</a></li>
+                    <li><a href="./pages/acerca-nosotros.html">Acerca de Nosotros</a></li>
+                    <li><a href="./pages/servicios.html">Servicios</a></li>
+                    <li><a href="./pages/contactanos.html">Contactanos</a></li>
                 </ul>
             </nav>
         </header>
