Se corrige logo de facebook en el footer

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -109,7 +109,7 @@
         <footer>
             <div class="iconos">
                 <a href="http://www.facebook.com.ar">
-                    <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
+                    <img src="../images/facebook.png" alt="Logo red social Facebook"></a>
                 <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
             </div>
         </footer>
