--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <footer>
             <div class="iconos">
                 <a href="http://www.facebook.com.ar">
-                    <img src="/images/facebook.png" alt="Logo red social Facebook"></a>
+                    <img src="./images/facebook.png" alt="Logo red social Facebook"></a>
                 <p>Copyright © 2023 FegaProveedores. Todos los derechos reservados.</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
