Se agrega sass al proyecto y se generan sus respectivos partials

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!---COMIENZA MAIN-->
         <main>
             <div class="titulo-main">
-                <h1>¿Quienes somos?</h1>
+                <h1>Quienes somos</h1>
             </div>
             <div class="primer-row">
                 <p>Somos una empresa joven,conformada por personas con basta experiencia en el area de proveer
