--- a/pages/trabajos-realizados.html
+++ b/pages/trabajos-realizados.html
@@ -68,25 +68,25 @@
                 <h1>Trabajos Realizados</h1>
             </div>
             <section class="trabajos-realizados">
-                <div class="card-trabajos1"><img
+                <div class="card-trabajos"><img
                         src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
                         neque
                         at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
                 </div>
-                <div class="card-trabajos2"><img
+                <div class="card-trabajos"><img
                         src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
                         neque
                         at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
                 </div>
-                <div class="card-trabajos3"><img
+                <div class="card-trabajos"><img
                         src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
                         neque
                         at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
                 </div>
-                <div class="card-trabajos4"><img
+                <div class="card-trabajos"><img
                         src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit Exercitationem ab qui reprehenderit
                         neque
