Corrije trabajos-realizados y cambios en el index

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                     <img src="./images/roflon-p.webp" alt="Pieza hecha en base a roflon-p">
                     <img src="./images/rolo-rodillo-2.webp" alt="Pieza mecanizada con forma de Rodillo o Rolo">
                 </div>
-                <label for="boton-vermas">Ver mas trabajos realizados:</label>
-                <a class="btn btn-dark" href="./pages/trabajos-realizados.html" id="boton-vermas">Ver mas</a>
+                <label for="boton-ver">Ver mas trabajos realizados:</label>
+                <button class="btn btn-dark" href="./pages/trabajos-realizados.html" id="boton-ver">Ver mas</button>
 
             </section>
             <section class="caja-fotos-principales ">
