Se añade slider en las fotos del index

--- a/pages/acerca-nosotros.html
+++ b/pages/acerca-nosotros.html
@@ -66,20 +66,18 @@
         <!--COMIENZA MAIN-->
         <main>
             <section class="mision">
-                <h1>Mision</h1>
+                <h1>Acerca de nosotros</h1>
+                <h2>Mision</h2>
                 <p>Nuestra misión es brindar valor a nuestros clientes a través de la prestación de servicios de
                     ingeniería,
-                    suministros, construcción, operación y gerenciamiento de proyectos de infraestructura.</p>
-                <img src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-            </section>
+                    suministros, construcción, operación y gerenciamiento de proyectos de infraestructura.</p>            </section>
             <section class=" vision">
-                <h1>Vision</h1>
+                <h2>Vision</h2>
                 <p>Buscamos ser la empresa de ingeniería y construcción líder en lo que respecta a método de trabajo,
                     patrimonio tecnológico y capacidades de sus recursos humanos.</p>
-                <img src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
             </section>
             <section class="valores">
-                <h1> Valores</h1>
+                <h2> Valores</h2>
                 <ul>
                     <h3>Seguridad</h3>
                     <li>Compromiso con la seguridad de las personas, con el cuidado del medio ambiente y con el
