--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+        <meta name="description" content="Fega Proveedores es una empresa joven conformada por personas con amplia experiencia en proveer soluciones específicas y óptimas para las necesidades de tu empresa. Ofrecemos soluciones de plásticos de ingeniería de alta calidad para aplicaciones alimentarias con bajo desgaste. Explora nuestros servicios, consulta nuestros trabajos realizados y contáctanos para obtener más información.">
+
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Fega Proveedores</title>
+    <title>Fega Proveedores - Proveedores de soluciones plasticos tipo ingenieria</title>
 </head>
 
 <body>
@@ -86,7 +88,7 @@
                     <img src="./images/rolo-rodillo-2.webp" alt="Pieza mecanizada con forma de Rodillo o Rolo">
                 </div>
                 <label for="boton-ver">Ver mas trabajos realizados:</label>
-                <button class="btn btn-dark" href="./pages/trabajos-realizados.html" id="boton-ver">Ver mas</button>
+                <a class="btn btn-dark" href="./pages/trabajos-realizados.html" id="boton-ver">Ver mas</a>
 
             </section>
             <section class="caja-fotos-principales ">
