--- a/pages/acerca-nosotros.html
+++ b/pages/acerca-nosotros.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Fega Proveedores</title>
+    <meta name="description" content="Conoce más sobre nosotros. En Fega Proveedores, nuestra misión es brindar valor a nuestros clientes a través de servicios de ingeniería, suministros, construcción, operación y gerenciamiento de proyectos de infraestructura. Buscamos ser líderes en el método de trabajo, tecnología y capacidades humanas. Nuestros valores incluyen la seguridad de las personas, el cuidado del medio ambiente, el desarrollo de las comunidades, el arraigo local y el respeto por la diversidad cultural, así como la confiabilidad en nuestros procesos y la previsibilidad. ¡Conócenos más y descubre cómo podemos ayudarte!">
+    <title>Fega Proveedores - Acerca de Nosotros</title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
 
