--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Fega Proveedores</title>
+    <meta name="description" content="Descubre nuestros servicios y materiales en Fega Proveedores. Ofrecemos una amplia gama de soluciones y materiales de alta calidad para satisfacer las necesidades de tu empresa. Desde piezas personalizadas hasta soluciones de ingeniería, nuestro equipo experimentado está listo para brindarte la mejor calidad y servicio. Explora nuestra variedad de servicios y materiales, y contáctanos para obtener más información.">
+    <title>Fega Proveedores - Servicios y Materiales</title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
 
