--- a/pages/trabajos-realizados.html
+++ b/pages/trabajos-realizados.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Fega Proveedores</title>
+    <meta name="description" content="Explora nuestra sección de Trabajos Realizados y descubre los proyectos en los que hemos trabajado. En Fega Proveedores, hemos realizado diversas soluciones y piezas personalizadas para satisfacer las necesidades específicas de nuestros clientes. Conoce nuestro trabajo a través de imágenes y descripciones de los proyectos realizados. Contáctanos para obtener más información sobre cómo podemos ayudarte.">
+    <title>Fega Proveedores - Trabajos Realizados </title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
 
