Se corrige vista mobile quedando el index de forma totalmente responsive

--- a/index.html
+++ b/index.html
@@ -89,14 +89,13 @@
                 </div>
                 <label for="boton-ver">Ver mas trabajos realizados:</label>
                 <a class="btn btn-dark" href="./pages/trabajos-realizados.html" id="boton-ver">Ver mas</a>
-
             </section>
             <section class="caja-fotos-principales ">
                 <h2>
                     Nuestros Clientes
                 </h2>
                 <p>Estas son algunas de las empresas que día a día confían en nuestro compromiso:</p>
-                <div class="container-clientes">
+                <div class="container-img container-clientes">
                 <img src="./images/emova-logo.jpg" alt="Logo de la empresa Emova">
                 <img src="./images/ceramica-san-lorenzo_logo.jpg" alt="Logo de la empresa ceramicas san lorenzo">
                 <img src="./images/aceros-angeletti.jpg" alt="Logo de la empresa Aceros Angeletti">
