--- a/pages/acerca-nosotros.html
+++ b/pages/acerca-nosotros.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <meta name="description" content="Conoce más sobre nosotros. En Fega Proveedores, nuestra misión es brindar valor a nuestros clientes a través de servicios de ingeniería, suministros, construcción, operación y gerenciamiento de proyectos de infraestructura. Buscamos ser líderes en el método de trabajo, tecnología y capacidades humanas. Nuestros valores incluyen la seguridad de las personas, el cuidado del medio ambiente, el desarrollo de las comunidades, el arraigo local y el respeto por la diversidad cultural, así como la confiabilidad en nuestros procesos y la previsibilidad. ¡Conócenos más y descubre cómo podemos ayudarte!">
+    <meta name="description"
+        content="Conoce más sobre nosotros. En Fega Proveedores, nuestra misión es brindar valor a nuestros clientes a través de servicios de ingeniería, suministros, construcción, operación y gerenciamiento de proyectos de infraestructura. Buscamos ser líderes en el método de trabajo, tecnología y capacidades humanas. Nuestros valores incluyen la seguridad de las personas, el cuidado del medio ambiente, el desarrollo de las comunidades, el arraigo local y el respeto por la diversidad cultural, así como la confiabilidad en nuestros procesos y la previsibilidad. ¡Conócenos más y descubre cómo podemos ayudarte!">
     <title>Fega Proveedores - Acerca de Nosotros</title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
@@ -66,18 +67,29 @@
 
         <!--COMIENZA MAIN-->
         <main>
-            <section class="mision">
+            <div class="titulo-acerca-nosotros">
                 <h1>Acerca de nosotros</h1>
+            </div>
+            <div class="mision-img">
+                <img src="../images/mision.jpg" alt="">
+            </div>
+
+            <div class="vision-img">
+                <img src="../images/vision.jpg" alt=""> 
+            </div>
+            <section class="mision color-fuente">
                 <h2>Mision</h2>
-                <p>Nuestra misión es brindar valor a nuestros clientes a través de la prestación de servicios de
+
+                <p class="centrado">Nuestra misión es brindar valor a nuestros clientes a través de la prestación de servicios de
                     ingeniería,
-                    suministros, construcción, operación y gerenciamiento de proyectos de infraestructura.</p>            </section>
-            <section class=" vision">
+                    suministros, construcción, operación y gerenciamiento de proyectos de infraestructura.</p>
+            </section>
+            <section class=" vision color-fuente">
                 <h2>Vision</h2>
-                <p>Buscamos ser la empresa de ingeniería y construcción líder en lo que respecta a método de trabajo,
+                <p class="centrado">Buscamos ser la empresa de ingeniería y construcción líder en lo que respecta a método de trabajo,
                     patrimonio tecnológico y capacidades de sus recursos humanos.</p>
             </section>
-            <section class="valores">
+            <section class="valores color-fuente">
                 <h2> Valores</h2>
                 <ul>
                     <h3>Seguridad</h3>
@@ -91,10 +103,7 @@
                     <h3>Confiabilidad</h3>
                     <li>Énfasis en los procesos y la previsibilidad</li>
                 </ul>
-                <p>
 
-                    Arraigo local y respeto por la diversidad cultural en el marco de una visión global de los negocios.
-                </p>
             </section>
         </main>
         <!--Termina el main-->
