Se agrega estilo y imagenes con su descricion y texto alternativo en trabajos-realizados

--- a/pages/trabajos-realizados.html
+++ b/pages/trabajos-realizados.html
@@ -8,7 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
-    <meta name="description" content="Explora nuestra sección de Trabajos Realizados y descubre los proyectos en los que hemos trabajado. En Fega Proveedores, hemos realizado diversas soluciones y piezas personalizadas para satisfacer las necesidades específicas de nuestros clientes. Conoce nuestro trabajo a través de imágenes y descripciones de los proyectos realizados. Contáctanos para obtener más información sobre cómo podemos ayudarte.">
+    <meta name="description"
+        content="Explora nuestra sección de Trabajos Realizados y descubre los proyectos en los que hemos trabajado. En Fega Proveedores, hemos realizado diversas soluciones y piezas personalizadas para satisfacer las necesidades específicas de nuestros clientes. Conoce nuestro trabajo a través de imágenes y descripciones de los proyectos realizados. Contáctanos para obtener más información sobre cómo podemos ayudarte.">
     <title>Fega Proveedores - Trabajos Realizados </title>
     <link rel="icon" href="../images/logofega.ico" type="icon">
 </head>
@@ -69,31 +70,32 @@
                 <h1>Trabajos Realizados</h1>
             </div>
             <section class="trabajos-realizados">
-                <div class="card-trabajos"><img
-                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
-                        neque
-                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
+                <div class="trabajos-realizados-col1">
+                    <div class="card-trabajos"><img src="../images/guia-cadena.jpg"
+                            alt="Guias de cadena en base a roflon">
+                        <p>Los guías de desgaste complementan las cadenas transportadoras, bandas modulares y correas
+                            dentadas para incrementar su rendimiento y reducir el mantenimiento de las cadenas de
+                            rodillos, correas trapezoidales, y correas planas y redondas.</p>
+                    </div>
+                    <div class="card-trabajos"><img src="../images/sello-teflon-corrugado.png" alt="sello de teflon corrugado blanco">
+                        <p>Sellos de Teflon para Maquina de corrugado
+                        </p>
+                    </div>
                 </div>
-                <div class="card-trabajos"><img
-                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
-                        neque
-                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
+                <div class="trabajos-realizados-col2">
+                    <div class="card-trabajos">
+                        <img src="../images/rolo-rodillo.webp" alt="Rodillo blanco hecho en Roflon-P">
+                        <p>Este diseño es exclusivo y esta elaborado en ROFLON-P, de esta forma se evita el uso de cajas
+                            de rodamientos, no necesitando ser engrasados y produciendo una menor fricción sobre la
+                            cinta</p>
+                    </div>
+                    <div class="card-trabajos">
+                        <img src="../images/teflon.webp" alt="Pieza plastica mecanizada con un calibre">
+                        <p>TEFLON - ROFLON - NYLON - DELRIN - Piezas mecanizadas
+                        </p>
+                    </div>
                 </div>
-                <div class="card-trabajos"><img
-                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ab qui reprehenderit
-                        neque
-                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
-                </div>
-                <div class="card-trabajos"><img
-                        src="https://storage.googleapis.com/proudcity/mebanenc/uploads/2021/03/placeholder-image.png">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit Exercitationem ab qui reprehenderit
-                        neque
-                        at! Aliquam placeat dolorem optio voluptatibus impedit?</p>
-                </div>
-                <!--TERMINA EL MAIN-->
+
 
 
             </section>
