--- a/pages/acerca-nosotros.html
+++ b/pages/acerca-nosotros.html
@@ -71,11 +71,11 @@
                 <h1>Acerca de nosotros</h1>
             </div>
             <div class="mision-img">
-                <img src="../images/mision.jpg" alt="">
+                <img src="../images/mision.jpg" alt="Logo con diana de dardos con uno dardo clavado">
             </div>
 
             <div class="vision-img">
-                <img src="../images/vision.jpg" alt=""> 
+                <img src="../images/vision.jpg" alt="Ojo con un engranaje azul"> 
             </div>
             <section class="mision color-fuente">
                 <h2>Mision</h2>
